# felly

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/actions/configure-environment/: action.yaml
.github/workflows/: cmake-multi-platform.yml
include/felly/: guarded_data.hpp  moved_flag.hpp  no_unique_address.hpp  non_copyable.hpp  numeric_cast.hpp  overload.hpp  scope_exit.hpp  unique_any.hpp  unique_ptr.hpp  version.hpp
tests/: CMakeLists.txt  asan.cpp  guarded_data.cpp  moved_flag.cpp  no_unique_address.cpp  non_copyable.cpp  numeric_cast.cpp  overload.cpp  scope_exit.cpp  unique_any.cpp  unique_ptr.cpp  version.cpp
tests/vcpkg-overlay-triplets/: x64-windows-asan.cmake
